docker/k8s/consitent-hash/nginx-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-hash-virtualservice
  namespace: demo-istio-hash
spec:
  gateways:
    - demo-istio-hash/nginx-hash-gateway
  hosts:
    - lab.k8s.io
  http:
    - match:
        - uri:
            prefix: /hash
      route:
        - destination:
            host: nginx-hash-service.demo-istio-hash.svc.cluster.local
            subset: all
